--- a/xmas-thing/index.html
+++ b/xmas-thing/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
       <title>Arduino</title>
-      <link rel="stylesheet" href="./public/main.css">
+      <link rel="stylesheet" href="./public/styles/main.css">
       <script src="node_modules/jquery/dist/jquery.min.js"></script>
       <script src="node_modules/jquery-colpick/js/colpick.js"></script>
     </head>
@@ -21,50 +21,28 @@
           </div>
           <div class="picker">
             <p class="status">The house is disconnected :(</p>
-            <svg id="picker" class="house" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" width="512px" height="512px" viewBox="0 0 57.204 57.203" style="enable-background:new 0 0 57.204 57.203;" xml:space="preserve">
-<g>
-	<g>
-		<path d="M7.745,33.974l2.497,21.231h36.597l2.873-21.231l-21.109-16.55L7.745,33.974z M27.854,50.022h-7.618l-0.48-7.993h8.098    V50.022z M27.854,40.529h-8.188l-0.554-9.241h8.743L27.854,40.529L27.854,40.529z M29.353,31.287h8.743l-0.617,9.241h-8.125    V31.287z M29.353,42.029h8.026l-0.533,7.993h-7.493V42.029z" />
-		<polygon points="57.204,37.844 49.585,19.61 28.838,1.998 24.867,5.298 24.505,9.805 24.48,13.854 13.134,22.742 12.4,15.659     7.495,19.735 0,37.844 28.838,15.113   " />
-		<polygon points="13.74,21.12 23.733,13.292 23.733,9.879 12.574,9.879   " />
-		<path d="M24.106,4.674h-9.908l-1.625,4.683h11.158L24.106,4.674z M22.171,8.358H14.81l0.875-2.685h6.799L22.171,8.358z" />
-	</g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-<g>
-</g>
-</svg>
-<span class="house__choose-colour">Tap the house to choose a colour</span>
+            <svg id="picker" class="house" xmlns="http://www.w3.org/2000/svg" width="512" height="512" viewBox="0 0 57.204 57.203"><path d="M7.745 33.974l2.497 21.23H46.84l2.872-21.23-21.11-16.55-20.857 16.55zm20.11 16.048h-7.62l-.48-7.993h8.1v7.992zm0-9.493h-8.19l-.553-9.242h8.743v9.24zm1.498-9.243h8.743l-.617 9.24h-8.126v-9.24zm0 10.742h8.026l-.534 7.992h-7.493V42.03z"/><path d="M57.204 37.844l-7.62-18.234L28.84 1.998l-3.97 3.3-.363 4.507-.025 4.05-11.346 8.887-.734-7.083-4.905 4.075L0 37.845l28.838-22.732z"/><path d="M13.74 21.12l9.993-7.828V9.88h-11.16zM24.106 4.674h-9.908l-1.625 4.683H23.73l.376-4.683zM22.17 8.358h-7.36l.875-2.685h6.8l-.314 2.685z"/></svg>
+            <span class="house__choose-colour">Tap the house to choose a colour</span>
+            <div class="blinking-led"></div>
           </div>
         </div>
     </body>
+    <script>
+      function loadStyle(url) {
+        var xhr = new XMLHttpRequest();
+        xhr.open('GET', url, true);
+        xhr.onreadystatechange = function () {
+          if (xhr.readyState == 4 && xhr.status == 200) {
+            var style = document.createElement('style');
+            style.innerHTML = xhr.responseText;
+            document.head.appendChild(style);
+          }
+        };
+        xhr.send();
+      }
+
+      loadStyle('./public/styles/hk-serif.css');
+    </script>
     <script src="/node_modules/socket.io-client/dist/socket.io.min.js"></script>
-    <script defer src="./public/client.js"></script>
+    <script src="./public/client.js"></script>
 </html>
