Add really annoying music

--- a/xmas-thing/index.html
+++ b/xmas-thing/index.html
@@ -21,9 +21,9 @@
           </div>
           <div class="picker">
             <p class="status">The house is disconnected :(</p>
-            <svg id="picker" class="house" xmlns="http://www.w3.org/2000/svg" width="512" height="512" viewBox="0 0 57.204 57.203"><path d="M7.745 33.974l2.497 21.23H46.84l2.872-21.23-21.11-16.55-20.857 16.55zm20.11 16.048h-7.62l-.48-7.993h8.1v7.992zm0-9.493h-8.19l-.553-9.242h8.743v9.24zm1.498-9.243h8.743l-.617 9.24h-8.126v-9.24zm0 10.742h8.026l-.534 7.992h-7.493V42.03z"/><path d="M57.204 37.844l-7.62-18.234L28.84 1.998l-3.97 3.3-.363 4.507-.025 4.05-11.346 8.887-.734-7.083-4.905 4.075L0 37.845l28.838-22.732z"/><path d="M13.74 21.12l9.993-7.828V9.88h-11.16zM24.106 4.674h-9.908l-1.625 4.683H23.73l.376-4.683zM22.17 8.358h-7.36l.875-2.685h6.8l-.314 2.685z"/></svg>
+            <svg id="picker" class="house" xmlns="http://www.w3.org/2000/svg" width="260" height="300" viewBox="0 0 57.204 57.203"><path d="M7.745 33.974l2.497 21.23H46.84l2.872-21.23-21.11-16.55-20.857 16.55zm20.11 16.048h-7.62l-.48-7.993h8.1v7.992zm0-9.493h-8.19l-.553-9.242h8.743v9.24zm1.498-9.243h8.743l-.617 9.24h-8.126v-9.24zm0 10.742h8.026l-.534 7.992h-7.493V42.03z"/><path d="M57.204 37.844l-7.62-18.234L28.84 1.998l-3.97 3.3-.363 4.507-.025 4.05-11.346 8.887-.734-7.083-4.905 4.075L0 37.845l28.838-22.732z"/><path d="M13.74 21.12l9.993-7.828V9.88h-11.16zM24.106 4.674h-9.908l-1.625 4.683H23.73l.376-4.683zM22.17 8.358h-7.36l.875-2.685h6.8l-.314 2.685z"/></svg>
             <span class="house__choose-colour">Tap the house to choose a colour</span>
-            <div class="blinking-led"></div>
+            <button class="play-song">Play a song</button>
           </div>
         </div>
     </body>
