--- a/xmas-thing/index.html
+++ b/xmas-thing/index.html
@@ -18,7 +18,7 @@
             <p>Choose a colour by tapping the house and it will change the colours on the little, tiny house
             that's currently sitting on my desk.</p>
             <p>This is part of a silly experiment using Web sockets, an Arduino and the johnny-five library.
-            It's part of a tutorial to demonstrate how little it takes to build something a little more
+            Read the <a href="http://blog.ricardofilipe.com/post/light-my-house">article and tutorial</a> to demonstrate how little effort it takes to build something more
           physical and interactive in the current Web of things.</p>
           </div>
           <div class="picker">
